--- a/src/components/Shareable/Sidebar/style.scss
+++ b/src/components/Shareable/Sidebar/style.scss
@@ -49,7 +49,8 @@ body {
       width: 14rem;
       .submenu {
         max-height: 70px;
-        overflow: auto;
+        overflow-y: auto;
+        overflow-x: hidden;
         .collapse-item {
           padding-left: 2rem;
           &:not(:last-child) {
