--- a/src/components/screens/Cadastros/CadastroHorarioComboAlimentacao/style.scss
+++ b/src/components/screens/Cadastros/CadastroHorarioComboAlimentacao/style.scss
@@ -19,6 +19,18 @@
   .footer-botoes {
     display: flex;
     justify-content: flex-end;
+
+    .desativado {
+      border: 1px solid #dadada;
+      color: #dadada;
+      cursor: default;
+      &:hover {
+        background-color: transparent;
+        color: #dadada;
+      }
+    }
+
+    margin-bottom: 10em;
   }
 
   .conteudo-wizard {
@@ -115,12 +127,10 @@
       .combo-ativo {
         .ant-time-picker-input {
           border-color: #82b7e8;
-        }
-      }
 
-      .combo-ativo-invalido {
-        .ant-time-picker-input {
-          border-color: #ff0000;
+          &::placeholder {
+            color: #42474a !important;
+          }
         }
       }
     }
