Implementa identificação do nutricionista

--- a/src/pages/DietaEspecial/style.scss
+++ b/src/pages/DietaEspecial/style.scss
@@ -19,3 +19,8 @@ $redAlert: #b40c02;
 .mx-2 {
   margin-left: 0em !important;
 }
+
+#identificacao-nutricionista .form-control {
+  background-color: transparent;
+  font-size: 0.8em;
+}
