--- a/src/components/screens/Cadastros/CadastroHorarioComboAlimentacao/style.scss
+++ b/src/components/screens/Cadastros/CadastroHorarioComboAlimentacao/style.scss
@@ -70,6 +70,12 @@
               border: 1px solid #086397;
               box-sizing: border-box;
               border-radius: 3px;
+              cursor: pointer;
+
+              &:hover {
+                color: #ffffff;
+                background-color: #086397;
+              }
             }
           }
         }
@@ -134,6 +140,31 @@
         }
       }
     }
+  }
+}
+
+.modal-form-att-alunos {
+  .input-qtd-alunos {
+    margin-bottom: 1em;
+
+    .input {
+      width: 180px;
+    }
+  }
+
+  .aviso-modal {
+    border: 1px solid #b40c02;
+    border-radius: 4px;
+    padding: 1em;
+
+    font-weight: bold;
+    font-size: 12px;
+    line-height: 14px;
+    color: #b40c02;
+  }
+
+  .justificatica-quantidade-alunos {
+    margin-bottom: 4em;
   }
 }
 
