--- a/src/components/SolicitacaoUnificada/style.scss
+++ b/src/components/SolicitacaoUnificada/style.scss
@@ -229,7 +229,7 @@ table.report-table {
 
   .header-tabela {
     background: #333333;
-    //color: #fff;
+    color: #fff;
     font-family: Roboto !important;
     font-style: normal;
     font-weight: bold;
