--- a/src/components/Shareable/Input/InputHorario/style.scss
+++ b/src/components/Shareable/Input/InputHorario/style.scss
@@ -6,5 +6,15 @@
     .ant-time-picker-input {
       height: 38px;
     }
+
+    span {
+      cursor: normal !important;
+      pointer-events: none !important;
+    }
+
+    i {
+      cursor: normal !important;
+      pointer-events: none !important;
+    }
   }
 }
