Ajusta estilos e textos

--- a/src/pages/DietaEspecial/style.scss
+++ b/src/pages/DietaEspecial/style.scss
@@ -28,3 +28,16 @@ $redAlert: #b40c02;
   background-color: transparent;
   font-size: 0.8em;
 }
+
+.modal-footer {
+  margin-top: 0.5em;
+}
+
+.mt-auto {
+  font-size: 0.65em;
+  margin-bottom: 0.7em;
+}
+
+.general-button {
+  margin-left: 1em;
+}
