Cria página de visualização de dieta

--- a/src/pages/DietaEspecial/style.scss
+++ b/src/pages/DietaEspecial/style.scss
@@ -41,3 +41,8 @@ $redAlert: #b40c02;
 .general-button {
   margin-left: 1em;
 }
+
+.alergia-descricao {
+  font-weight: bolder;
+  padding-left: 0.5em;
+}
