Implementa busca de dados pelo cod EOL

--- a/src/components/screens/DietaEspecial/Escola/style.scss
+++ b/src/components/screens/DietaEspecial/Escola/style.scss
@@ -37,3 +37,9 @@ form.special-diet {
     }
   }
 }
+div.datepicker
+  div.react-datepicker-wrapper
+  .react-datepicker__input-container
+  input {
+  background-color: #dadada;
+}
