--- a/src/components/Shareable/CardListarSolicitacoes/style.scss
+++ b/src/components/Shareable/CardListarSolicitacoes/style.scss
@@ -14,8 +14,23 @@
   }
 }
 
-.card-list-panel {
+.card-listagem-solicitacoes {
   overflow-x: hidden;
+  height: 300px;
+  &::-webkit-scrollbar {
+    width: 3px;
+  }
+  &::-webkit-scrollbar-track {
+    border-radius: 10px;
+  }
+  &::-webkit-scrollbar-thumb {
+    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.5);
+  }
+}
+
+.card-list-panel {
+  overflow: auto;
+  height: 380px;
   border: none !important;
   i {
     padding: 0 10px;
