--- a/src/components/Shareable/Paginacao/style.scss
+++ b/src/components/Shareable/Paginacao/style.scss
@@ -13,11 +13,10 @@
 
   ul.ant-pagination {
     li {
-      padding: 1.5em;
       border-radius: 0px;
       border: 0px;
-      width: 5em;
-      height: 5em;
+      width: 32px;
+      height: 32px;
     }
     li.ant-pagination-item-active {
       background-color: $green !important;
