--- a/src/components/Shareable/style.scss
+++ b/src/components/Shareable/style.scss
@@ -50,6 +50,12 @@ textarea {
   }
 }
 
+.modal-content {
+  .modal-body {
+    font-size: 14px;
+  }
+}
+
 .checkbox-label {
   color: $gray;
   font-size: 14px;
