implementando combos tipo alimentacao para inclusao

--- a/src/components/screens/DietaEspecial/Escola/style.scss
+++ b/src/components/screens/DietaEspecial/Escola/style.scss
@@ -41,7 +41,8 @@ div.datepicker
   div.react-datepicker-wrapper
   .react-datepicker__input-container
   input {
-  background-color: #dadada;
+  // TODO: Pedro, arrumar o background do input porque esta afetando todos os componentes input
+  // background-color: #dadada;
 }
 
 div.current-diets {
