--- a/src/components/screens/Cadastros/style.scss
+++ b/src/components/screens/Cadastros/style.scss
@@ -387,13 +387,15 @@ table.cadastro-empresa {
   margin: 0 !important;
 }
 
-.dropdown-content {
-  position: relative !important;
-  label[aria-selected="true"] {
-    font-weight: bold !important;
-    font-size: 14px;
-    color: white !important;
-    background-color: #109cf1 !important;
+.cadastro {
+  .dropdown-content {
+    position: relative !important;
+    label[aria-selected="true"] {
+      font-weight: bold !important;
+      font-size: 14px;
+      color: white !important;
+      background-color: #109cf1 !important;
+    }
   }
 }
 
