--- a/src/components/screens/Cadastros/FaixasEtarias/style.scss
+++ b/src/components/screens/Cadastros/FaixasEtarias/style.scss
@@ -1,11 +1,15 @@
 @import "../../../../styles/variables.scss";
 
+.modal-redefinicao .modal-dialog.modal-lg {
+  width: 30em;
+}
+
 .faixas-etarias {
   .select-meses {
     height: 20em !important;
   }
   .faixa-etaria-item-editando {
-    background-color: $greenHover !important;
+    background-color: $greenBackgroundToastSuccess !important;
   }
   .faixa-etaria-item {
     display: flex;
@@ -16,15 +20,18 @@
       flex-grow: 100;
     }
   }
+  .botao-finalizar {
+    margin-left: 1em;
+  }
   .table {
     .thead-light th {
-      background-color: $grayHeader;
-      border: 1px solid $grayHeader;
-      color: $blackSubtle;
+      background-color: $grayBackground;
+      border: 1px solid $grayInputBackground;
+      color: $blackInput;
     }
     .table-bordered th,
     .table-bordered td {
-      border: 1px solid $grayHeader;
+      border: 1px solid $grayInputBackground;
     }
   }
 }
