--- a/src/components/screens/Cadastros/FaixasEtarias/style.scss
+++ b/src/components/screens/Cadastros/FaixasEtarias/style.scss
@@ -4,6 +4,10 @@
   width: 30em;
 }
 
+.modal-justificativa-body {
+  margin-bottom: 0.5em;
+}
+
 .faixas-etarias {
   .select-meses {
     height: 20em !important;
