Pequena correção no estilo de campos vindos de wysiwyg

--- a/src/components/screens/DietaEspecial/Relatorio/style.scss
+++ b/src/components/screens/DietaEspecial/Relatorio/style.scss
@@ -6,6 +6,10 @@
   }
 }
 
+.texto-wysiwyg td {
+  border: 1px black solid !important;
+}
+
 .information-codae .card-body {
   padding: 1rem !important;
 }
