finalizando o formulario de inclusao

--- a/src/components/InclusaoDeAlimentacaoDaCei/style.scss
+++ b/src/components/InclusaoDeAlimentacaoDaCei/style.scss
@@ -25,6 +25,11 @@
     }
   }
 
+  .botoes-submit-inclusoes-cei {
+    display: flex;
+    justify-content: flex-end;
+  }
+
   .periodo-e-tipo-de-alimentacoes {
     display: grid;
     grid-template-columns: 60% 39%;
