Adiciona cor faltante

--- a/src/components/InclusaoDeAlimentacao/style.scss
+++ b/src/components/InclusaoDeAlimentacao/style.scss
@@ -32,6 +32,9 @@
     &.number-4 {
       background-color: #e4f1ff;
     }
+    &.number-5 {
+      background-color: #d6ffea;
+    }
   }
 
   section {
