--- a/src/components/Shareable/style.scss
+++ b/src/components/Shareable/style.scss
@@ -485,6 +485,7 @@ div.caption-choices {
     padding: 10px 0;
   }
   tr {
+    padding-left: 0.1em;
     th:nth-child(1),
     td:nth-child(1),
     th:nth-child(2),
