Remove coluna qtde total alunos no periodo parcial

--- a/src/components/AlteracaoDeCardapio/CEI/style.scss
+++ b/src/components/AlteracaoDeCardapio/CEI/style.scss
@@ -18,5 +18,11 @@
   }
 }
 .tabela-substituicao th {
+  table-layout: fixed;
   width: 33.33%;
+}
+.tabela-substituicao.tabela-substituicao-parcial {
+  th:first-child {
+    width: 66.66%;
+  }
 }
