--- a/src/components/SolicitacaoDeKitLanche/Container/style.scss
+++ b/src/components/SolicitacaoDeKitLanche/Container/style.scss
@@ -1,6 +1,12 @@
-div.kits-total {
-  label,
-  span {
-    font-size: 14px;
+.solicitacao-kit-lanche {
+  div.kits-total {
+    label,
+    span {
+      font-size: 14px;
+    }
+  }
+  div.sub-title {
+    margin-top: 2em;
+    margin-bottom: 0px;
   }
 }
