--- a/src/components/screens/Produto/Cadastro/Step2/style.scss
+++ b/src/components/screens/Produto/Cadastro/Step2/style.scss
@@ -7,4 +7,32 @@ div.cadastro-produto-step2 {
     font-size: 14px;
     color: $blackInput;
   }
+  .school-container {
+    font-size: 14px;
+    .title {
+      color: $blackInput;
+      font-weight: bold;
+    }
+    table.table-informacoes-nutricionais {
+      width: 100%;
+      thead {
+        font-weight: bold;
+        th {
+          padding-top: 1em;
+          padding-bottom: 1em;
+          border-top: 1px solid #e9eaea;
+          border-bottom: 1px solid #a7a7a7;
+          background-color: #f5f6f8;
+        }
+      }
+      tbody {
+        tr {
+          padding-top: 0.3em;
+          padding-bottom: 0.3em;
+          border-bottom: 1px solid #a7a7a7;
+          color: $blackInput;
+        }
+      }
+    }
+  }
 }
