--- a/src/components/screens/Produto/Cadastro/Step2/style.scss
+++ b/src/components/screens/Produto/Cadastro/Step2/style.scss
@@ -35,4 +35,9 @@ div.cadastro-produto-step2 {
       }
     }
   }
+  .card-warning {
+    border-radius: 4px;
+    border-color: $grayPlaceholder;
+    color: $grayPlaceholder;
+  }
 }
