--- a/src/components/Shareable/Tabs/style.scss
+++ b/src/components/Shareable/Tabs/style.scss
@@ -3,7 +3,7 @@
 .tabs {
   font-weight: bold;
   text-align: center;
-  font-size: 12px;
+  font-size: 14px;
   cursor: pointer;
   margin-left: 1em;
   margin-right: 1em;
@@ -14,8 +14,8 @@
       border-bottom: 3px solid $green;
     }
     &.inactive {
-      color: $grayDisabled;
-      border-bottom: 3px solid $grayDisabled;
+      color: $grayPlaceholder;
+      border-bottom: 3px solid transparent;
     }
   }
 }
