tela faq: corrige regex de busca e botao de voltar

--- a/src/components/Shareable/Page/style.scss
+++ b/src/components/Shareable/Page/style.scss
@@ -11,6 +11,10 @@
   padding-top: 1.2rem;
 }
 
+.page-no-sidebar-card {
+  min-height: 500px;
+}
+
 #wrapper {
   padding-right: 3rem;
   background-color: $whiteBackground;
