--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -11,6 +11,7 @@ $blueCheckAndRadio: #007bff;
 $blueIcon: #334d6e;
 $blueSelected: #f2fbfe;
 $blueToastInfo: #0c5460;
+$bordeaux: #864241;
 $gray: #686868;
 $grayBackground: #fafafa;
 $grayCard: #eeeeee;
@@ -28,6 +29,7 @@ $greenPanel: #297805;
 $greenToastSuccess: #155724;
 $orange: #d06d12;
 $placeholder: #ced4da;
+$purple: #9b51e0;
 $red: #a50e05;
 $redAlert: #e21017;
 $redToastError: #721c24;
