correcoes layout da tabela de faixas etarias

--- a/src/components/Shareable/TabelaFaixaEtaria/style.scss
+++ b/src/components/Shareable/TabelaFaixaEtaria/style.scss
@@ -35,6 +35,7 @@
       border-right: 0.5px solid #e9eaea;
     }
     .alunos-matriculados {
+      text-align: center;
       border-left: 0.5px solid #e9eaea;
       border-right: 0.5px solid #e9eaea;
     }
