load primeiro step funcionando

--- a/src/components/screens/Produto/Cadastro/Step1/style.scss
+++ b/src/components/screens/Produto/Cadastro/Step1/style.scss
@@ -49,7 +49,7 @@ div.cadastro-produto-step1 {
 .adicionar-marca-fornecedor {
   display: flex;
   justify-content: center;
-  align-items: flex-end;
+  align-items: center;
 
   .botao-adicionar-marca-fabricante {
     height: 32px;
