--- a/src/components/screens/Produto/BuscaAvancada/style.scss
+++ b/src/components/screens/Produto/BuscaAvancada/style.scss
@@ -19,6 +19,10 @@
   z-index: 5;
 }
 
+.ant-input ant-select-search__field {
+  height: 38px !important;
+}
+
 .check-tipos-prod {
   padding-top: 0.5em;
   display: grid;
@@ -112,5 +116,13 @@
 
   button {
     margin-left: 10px;
+  }
+}
+
+.ant-select-selection__rendered {
+  ul {
+    li {
+      height: 100% !important;
+    }
   }
 }
