inserindo texto de licença no sidebar

--- a/src/components/Shareable/Sidebar/style.scss
+++ b/src/components/Shareable/Sidebar/style.scss
@@ -27,6 +27,15 @@ body {
   }
 }
 
+.detalhes-licenca {
+  font-weight: bold !important;
+  line-height: 18px !important;
+}
+
+.conteudo-detalhes {
+  width: 80%;
+}
+
 .sidebar-dark {
   ::-webkit-scrollbar {
     width: 8px;
