--- a/src/components/screens/Produto/BuscaAvancada/style.scss
+++ b/src/components/screens/Produto/BuscaAvancada/style.scss
@@ -28,6 +28,10 @@
   height: 38px !important;
 }
 
+.ant-select-selection--multiple {
+  height: 32px !important;
+}
+
 .check-tipos-prod {
   padding-top: 0.5em;
   display: grid;
