--- a/src/components/Shareable/SelectWithHideOptions/styles.css
+++ b/src/components/Shareable/SelectWithHideOptions/styles.css
@@ -1,3 +1,7 @@
 .ant-select-selection--multiple{
-    min-height: 38px;
+    min-height: 32px;
+}
+
+.ant-select-selection{
+    height: 32px auto;
 }
