--- a/src/styles/custom.css
+++ b/src/styles/custom.css
@@ -9941,6 +9941,11 @@ a.text-dark:hover, a.text-dark:focus {
   color: #6c757d !important;
 }
 
+.text-black {
+  color: #000000;
+}
+
+
 .text-black-50 {
   color: rgba(0, 0, 0, 0.5) !important;
 }
