--- a/src/components/screens/Produto/BuscaAvancada/style.scss
+++ b/src/components/screens/Produto/BuscaAvancada/style.scss
@@ -15,13 +15,15 @@
   }
 }
 
-.react-datepicker-popper {
-  z-index: 5;
-  position: absolute;
-  will-change: transform;
-  top: 0px;
-  left: 0px;
-  transform: translate3d(0px, 38px, 0px) !important;
+.form-busca-avancada {
+  .react-datepicker-popper {
+    z-index: 5;
+    position: absolute;
+    will-change: transform;
+    top: 0px;
+    left: 0px;
+    transform: translate3d(0px, 38px, 0px) !important;
+  }
 }
 
 .ant-select-search__field {
