--- a/src/components/Shareable/SelectWithHideOptions/styles.css
+++ b/src/components/Shareable/SelectWithHideOptions/styles.css
@@ -1,7 +1,7 @@
-.ant-select-selection--multiple{
-    min-height: 32px;
+.ant-select-selection--multiple {
+  min-height: 32px;
 }
 
-.ant-select-selection{
-    height: 32px auto;
+.ant-select-selection {
+  height: 38px !important;
 }
