--- a/src/components/Shareable/ModalPadrao/style.scss
+++ b/src/components/Shareable/ModalPadrao/style.scss
@@ -9,3 +9,11 @@
     text-align: left;
   }
 }
+
+.numero-protocolo {
+  display: flex;
+  justify-content: flex-end;
+  margin-right: 1em;
+  font-weight: bold;
+  color: #000000;
+}
