modal ativacao/suspensao de produto

--- a/src/components/screens/Produto/AtivacaoSuspensao/style.scss
+++ b/src/components/screens/Produto/AtivacaoSuspensao/style.scss
@@ -1,4 +1,11 @@
 .screen-ativacao-suspensao-produto {
+  .texto-veja-resultados {
+    font-size: 14px;
+    font-weight: bold;
+    color: #42474a;
+    margin-bottom: 0.3rem;
+  }
+
   .header-busca-produto {
     font-style: normal;
     font-weight: bold;
