--- a/src/components/screens/Produto/AtivacaoSuspensao/FormBuscaProduto/style.scss
+++ b/src/components/screens/Produto/AtivacaoSuspensao/FormBuscaProduto/style.scss
@@ -139,15 +139,10 @@
     margin-top: 3em;
   }
 
-  .datepicker-fixed-padding {
-    color: #42474a !important;
-    padding: 2px !important;
-  }
-
-  .react-datepicker-popper {
-    z-index: 5;
-    position: absolute;
-    top: 0px;
-    left: 0px;
+  .select {
+    label {
+      color: #42474a !important;
+      padding: 2px !important;
+    }
   }
 }
