responder reclamacao: integrar endpoint

--- a/src/components/Shareable/DetalheDoProduto/styles.scss
+++ b/src/components/Shareable/DetalheDoProduto/styles.scss
@@ -3,7 +3,7 @@
 .shareable-detalhe-produto {
   header {
     display: grid;
-    grid-template-columns: 35% 25% 20% 20%;
+    grid-template-columns: 28% 18% 18% 18% 18%;
     margin: 20px 0;
   }
 
@@ -21,6 +21,13 @@
     line-height: 18px;
     color: #353535;
     margin: 6px 0 0 0;
+  }
+
+  .componente-informacao-de-reclamante .responder-reclamacao-anexos {
+    margin-left: 0 !important;
+  }
+  .componente-informacao-de-reclamante .responder-reclamacao-anexos .col-12 {
+    padding-left: 0 !important;
   }
 
   min-width: 100%;
