implementando modal de resposta analise sensorial

--- a/src/components/screens/Produto/RelatorioAnaliseSensorial/styles.scss
+++ b/src/components/screens/Produto/RelatorioAnaliseSensorial/styles.scss
@@ -58,6 +58,10 @@
   height: 56px;
   border: 1px solid #e8e8e8;
   margin-bottom: 0.5em;
+
+  i {
+    cursor: pointer;
+  }
 }
 
 .informacao-detalhe {
